min height to dashboard controller to resolve white space at bottom issue

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -450,7 +450,7 @@ margin:0 10%;
 }
 .bottomDiv {
 	background-color: #593F5A;
-	margin: 0;
+	margin: 1% 0 0;
 }
 /*#home .bottomDiv{background-color: #593F5A;
     bottom: 0;
